Functional Device entity, getting all devices and sensors endpoint, getting house information, setting preferred humidity and temperature
